--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "rinha-backend-2025",
-  "module": "index.ts",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "dev": "bun --watch src/index.ts",
-    "build": "bun build src/index.ts --target bun --outdir ./dist",
-    "start": "NODE_ENV=production bun dist/index.js"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.2.19"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
-  "dependencies": {
-    "elysia": "^1.3.5"
-  }
+	"name": "rinha-backend-2025-bun",
+	"main": "src/index.ts",
+	"type": "module",
+	"scripts": {
+		"check": "biome check --write .",
+		"dev": "bun run --hot src/index.ts",
+		"build": "bun build src/index.ts --target bun --outdir ./dist",
+		"compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
+		"start": "bun run dist/index.js"
+	},
+	"dependencies": {
+		"elysia": "^1.3.5",
+		"ioredis": "^5.6.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.1.2",
+		"@types/bun": "^1.2.19"
+	},
+	"peerDependencies": {
+		"typescript": "^5"
+	}
 }
